--- a/css/style.css
+++ b/css/style.css
@@ -43,10 +43,12 @@ header h2 {
   font-size: 80px;
   text-align: center;
 	margin-bottom: 30px;
+  color: palevioletred;
 }
 header h4 {
   font-family: 'Pacifico';
   text-align: center;
+  color: aquamarine;
 }
 
 @media only screen and (max-width: 500px) {
